# qtPythonConsoleCMake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  console.cpp  console.h  consoledialog.cpp  consoledialog.h  consolewidget.cpp  consolewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  pyConsole.cpp  pyConsole.h
src/: CMakeLists.txt  DataArray.cpp  DataArray.h  consoledialog.cpp  consolewidget.cpp  consolewidget.h  main.cpp  mainwindow.h  mymodule.py  pyConsole.h
